Added basic layout for Home and Account controllers

--- a/ASPCORE_RML_XCast_Store/RMLXCast.Web.csproj
+++ b/ASPCORE_RML_XCast_Store/RMLXCast.Web.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="7.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -15,10 +16,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RMLXCast.Web.Framework\RMLXCast.Web.Framework.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Views\Account\" />
   </ItemGroup>
 
 </Project>
