added create product page

--- a/ASPCORE_RML_XCast_Store/RMLXCast.Web.csproj
+++ b/ASPCORE_RML_XCast_Store/RMLXCast.Web.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\RMLXCast.Web.Framework\RMLXCast.Web.Framework.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\ExternalFiles\Products\" />
+  </ItemGroup>
+
 </Project>
