wip on all products view

--- a/ASPCORE_RML_XCast_Store/RMLXCast.Web.csproj
+++ b/ASPCORE_RML_XCast_Store/RMLXCast.Web.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="wwwroot\ExternalFiles\ProductDefaultImage\" />
     <Folder Include="wwwroot\ExternalFiles\Products\" />
   </ItemGroup>
 
