--- a/RMLXCast.Services/RMLXCast.Services.csproj
+++ b/RMLXCast.Services/RMLXCast.Services.csproj
@@ -15,4 +15,8 @@
     <Folder Include="Account\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+  </ItemGroup>
+
 </Project>
