adde default connection string

--- a/ASPCORE_RML_XCast_Store/appsettings.json
+++ b/ASPCORE_RML_XCast_Store/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=216.158.236.18;Database=HUBLAB_STORE_DB;Trusted_Connection=False;MultipleActiveResultSets=true;User=hublabstoredb;Password=ijGKSarFPNHKCE5;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
